--- a/backend-challenge/docker-compose.prod.yml
+++ b/backend-challenge/docker-compose.prod.yml
@@ -22,7 +22,7 @@ services:
       - nginx-reverse-proxy-net
 
   web-prod:
-    image: "simeonevilardo/pysect-backend-challenge-prod"
+    image: "simeonevilardo/pysect-backend-challenge-prod:latest"
     container_name: pysect-backend-challenge-prod
     platform: linux/arm64/v8
     volumes:
