--- a/backend-challenge/docker-compose.dev.yml
+++ b/backend-challenge/docker-compose.dev.yml
@@ -22,7 +22,7 @@ services:
       - nginx-reverse-proxy-net
 
   web-dev:
-    image: "simeonevilardo/pysect-backend-challenge-dev"
+    image: "simeonevilardo/pysect-backend-challenge-dev:latest"
     container_name: pysect-backend-challenge-dev
     platform: linux/arm64/v8
     volumes:
