--- a/backend-challenge/docker-compose.dev.yml
+++ b/backend-challenge/docker-compose.dev.yml
@@ -38,7 +38,7 @@ services:
       VIRTUAL_HOST: py.sect.test.letz.dev
       VIRTUAL_PATH: ~^/(api|static)/
       VIRTUAL_PORT: 8000
-    command: bash -c "source /opt/django/pypkgs/bin/activate && python -Wd manage.py runserver 0.0.0.0:8000"
+    command: ./docker/django/local_run.sh
 
 networks:
   nginx-reverse-proxy-net:
