--- a/backend-challenge/docker-compose.prod.yml
+++ b/backend-challenge/docker-compose.prod.yml
@@ -38,7 +38,8 @@ services:
       VIRTUAL_HOST: py.sect.letz.dev
       VIRTUAL_PATH: ~^/(api|static)/
       VIRTUAL_PORT: 8000
-    command: ./docker/django/local_run.sh
+    command: >
+      bash -c "source /opt/django/pypkgs/bin/activate && python -Wd manage.py runserver 0.0.0.0:8000 && readonly cmd=\"$*\" && exec \$cmd"
 
 networks:
   nginx-reverse-proxy-net:
